[tool.poetry]
name = "yato-lib"
version = "0.0.9"
authors = ["Christophe Blefari <yato@blef.fr>"]
license = "MIT"
description = "The smallest DuckDB SQL transformations orchestrator"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
keywords = ["duckdb", "sql", "orchestrator", "etl"]
include = [ "LICENSE.txt", "README.md", "examples"]
packages = [
    { include = "yato" },
]

[tool.poetry.scripts]
yato = 'cli:cli'

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
boto3 = "^1.34.51"
sqlglot = "^22.0.1"
duckdb = "^0.9.2"
click = "^8.1.7"
pandas = {version = "2.0.3", optional = true}
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pytest = "^8.0.2"

[tool.poetry.extras]
pandas = ["pandas"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/Bl3f/yato"
Repository = "https://github.com/Bl3f/yato"
Issues = "https://github.com/Bl3f/yato/issues"