[project]
name = "yato-lib"
version = "0.0.17"
description = "The smallest DuckDB SQL transformations orchestrator"
authors = [{ name = "Christophe Blefari", email = "yato@blef.fr" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "duckdb",
    "sql",
    "orchestrator",
    "etl",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
dependencies = [
    "boto3>=1.34.51,<2",
    "sqlglot>=23.0.2",
    "duckdb>=1.0.0,<2",
    "click>=8.1.7,<9",
    "rich>=13.7.1,<14",
]

[project.optional-dependencies]
pandas = ["pandas>=2.2.0,<3"]

[project.urls]
Homepage = "https://github.com/Bl3f/yato"
Repository = "https://github.com/Bl3f/yato"
Issues = "https://github.com/Bl3f/yato/issues"

[project.scripts]
yato = "yato.cli:cli"

[dependency-groups]
dev = [
    "black>=24.2.0,<25",
    "isort>=5.13.2,<6",
    "pytest>=8.0.2,<9",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "yato"
module-root = "."
source-include = ["LICENSE.txt", "examples/**"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
